[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nercone-momiji"
version = "0.1.0"
description = "HTTP/1.1 Server for Python"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [ { name = "Nercone", email = "nercone@nercone.dev" } ]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "uvloop",
    "minify-html",
    "rcssmin",
    "rjsmin",
    "scour",
    "zstandard",
    "brotlicffi"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]

[tool.uv.build-backend]
module-name = "momiji"
