[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[project]
name = "rear-momiji"
version = "3.4.6"
description = "HTTP/1.1 Server for Python"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [ { name = "Nercone", email = "nercone@nercone.dev" } ]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "uvloop",
    "minify-html",
    "rcssmin",
    "rjsmin",
    "scour",
    "xxhash",
    "zstandard",
    "brotlicffi"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[tool.uv.build-backend]
module-name = "momiji"

[tool.pytest.ini_options]
asyncio_mode = "auto"
